--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -25,20 +25,23 @@
              <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
                 <div class="text-lg lg:flex lg:flex-grow">
                         <li class="mr-3">
-                         <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/google.org/covid-19">COVID-19</a>
+                         <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/covid-19">COVID-19</a>
                         </li>
                         <li class="mr-3">
-                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/google.org/my-work">My work</a>
+                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/my-work">My work</a>
                         </li>
                         <li class="mr-3">
-                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/google.org/my-approach">My approach</a>
+                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/my-approach">My approach</a>
                         </li>
                         <li class="mr-3">
-                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/google.org/opportunities" >Opportunities</a>
+                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/opportunities" >Line Chart</a>
                         </li>
                         <li class="mr-3">
-                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/google.org/latest">Latest</a>
+                          <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/latest">Latest</a>
                       </li>
+                      <li class="mr-3">
+                        <a class="text-lg inline-block border border-white rounded hover:border-gray-200 text-gray-600 font-medium hover:text-black hover:bg-gray-200 py-1 px-3" href="/stacked-bar-graph">Stacked Bar Graph</a>
+                    </li>
                 </div>
              </div>
         </div>
