--- a/src/app/latest/latest/latest.component.html
+++ b/src/app/latest/latest/latest.component.html
@@ -1,1 +1,9 @@
 <app-header></app-header>
+<h2 class="pl-20">Comparison Bar Chart</h2>
+<figure  id="bar" ></figure>
+
+<h2 class="pl-20 pt-20">Line Chart and Bar Chart Together</h2>
+
+
+
+<figure  id="barLine"></figure>
